css/style.scss
/* ... */
body {
  font-family: "Open Sans", sans-serif;
  font-weight: 300;
  background-color: $dark;
  color: $white;
  font-size: 18px;
  width: 100%;

  @media (max-width: $screen-sm-min) {
  	padding-bottom: 46px;
  }  
  @media (min-width: $screen-sm-min) {
  	padding-top: 46px;
  }
}

h1 {
  font-family: "Montserrat", sans-serif;
  color: $light-blue;
  text-align: center;
  margin-top: 20px;
}

h2 {
  display: block;
  text-align: center;
  margin-top: 20px;

  small::before {
    content: "\A";
    white-space: pre;
  }

  small {
    font-size: 16px;
    color: $light-medium
  }
}

h3 {
  display: block;
  text-align: center;
  margin-bottom: 30px;
  color: $light-blue;
  font-size: 26px;
}

a,
a:active {
  color: $light-blue;
  text-decoration: none;
}

a:hover {
  color: $dark-blue;
  text-decoration: none;
}

ul {
  list-style-type: none;
}

.navbar,
.nav {
  background-color: $dark-blue;

  .navbar-toggle {
    margin-top: 10px;
    padding-top: 0px;
    padding-bottom: 20px;
  }

  li {
    a,
    a:active {
      color: $white;
    }

    a:hover {
      color: $dark-blue;
      text-decoration: none;
    }
  }
}

.clearfix:after {
  content: " ";
  display: block;
  height: 0;
  clear: both;
}

.header {

}

.menu-button {
  color: $white;
  font-size: 24px;
  position: fixed;
  cursor: pointer;
  line-height: 1em;
  padding: 10px;
  background-color: $dark;
  z-index: 100;
  width: 100%;
  text-align: center;
  left: 0;

  @media (min-width: $screen-sm-min) {
    top: 0;
    -webkit-transition: top 0.3s ease-in-out;
    -moz-transition: top 0.3s ease-in-out;
    transition: top 0.3s ease-in-out;
  }
  @media (max-width: $screen-sm-min) {
    bottom: 0;
  }

  a {
    color: white;
    -webkit-transition: 0.3s ease-in-out;
    -moz-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
  }

  a:hover {
    color: $light-blue;
  }

  i {
    display: inline-block;
    width: 20%;
    max-width: 100px;
  }

  .fa-home {
    font-size: 26px;
  }

  .fa-list {
    font-size: 23px;
  }

  .legal-icon {
    vertical-align: top;
    display: inline-block;
    margin-top: -2px; 
  }
}

.nav-up {
  @media (min-width: $screen-sm-min) {
    top: -46px;
  }
}

.youtube-embed {
  margin-left: -15px;
  width: calc(100% + 30px);
  height: 394px;

  @media (min-width: $screen-sm-min) {
    width: calc(100% + 60px);
    margin-left: -30px;
  }
}

.content-panel {
  background-color: $medium;
  padding-top: 20px;
  padding-bottom: 20px;
  padding-left: 30px;
  padding-right: 30px;
  margin-top: 20px;
  box-shadow: 0px 0px 0px 0px, 0px 6px 12px rgba(0, 0, 0, 0.2);
  border-bottom: 5px solid $light-blue;
}

.links {
  margin-top: 25px;
  text-align: center;

  i {
    padding-left: 5px;
    padding-right: 5px;

    @media (min-width: $screen-sm-min) {
      padding-left: 10px;
      padding-right: 10px;
    }
  }

  .fa, .fab, .fas, .far {
    -webkit-transition: 0.3s ease-in-out;
    -moz-transition: 0.3s ease-in-out;
    transition: 0.3s ease-in-out;
  }

  .fa-linkedin:hover {
    color: $light-blue;
  }

  .fa-xing-square:hover {
    color: $light-blue;
  }

  .fa-github-square:hover {
    color: $light-blue;
  }

  .fa-rss:hover {
    color: $light-blue;
  }
}

/* Index */

.index {
  height: 100%;
  max-height: 100%;
  width: 100%;
  padding: 0px;

  @media (min-width: $screen-sm-min) {
    width: 700px;
    max-width: 700px;
  }

  .header {
    margin-top: 10px;
    margin-left: 0%;
    margin-bottom: 0px;
    font-size: 32px;
    width: 100%;

    @media (min-width: $screen-lg-min) {
      margin-left: -10%;
      width: 120%;
    }
  }

  .author-row {
    margin-top: 80px;
  }

  .row {
    height: 100%;
    max-height: 100%;
    margin-left: 0px;
    margin-right: 0px;
  }

  .gravatar {
    width: 100%;
    margin-top: -95px;
    text-align: center;
  }

  .author-text {
    margin-top: 30px;

    b {
      font-size: 32px;
    }
  }

  .links {
    font-size: 2em;
  }

  .articles {
    text-align: center;
    font-size: 20px;

    

    ul {
      padding: 0px;

      li {
        margin-bottom: 20px;
        font-size: 24px;

        a:hover {
          color: $light-medium;
        }

        small {
          font-size: 16px;
          margin-top: -10px;
          padding-top: 0px;
          color: $light-medium;
        }
      }
    }

    a,
    a:active {
      color: $white;
      white-space: nowrap;
    }

    a:hover {
      color: $light-blue;
    }
  }

  .copyright {
    margin-top: 50px;
    text-align: center;
  }

  .links {
    a,
    a:active {
      color: #ffffff;
    }
  }

  .menu {
    margin-top: 250px;
    margin-bottom: 20px;
    font-size: 20px;
    position: absolute;
    bottom: 0px;

    a,
    a:active {
      color: #ffffff;
    }

    a:hover {
      color: $light-blue;
    }

    ul {
      margin-bottom: 30px;
      padding-left: 10px;

      ul {
        padding-left: 50px;
        list-style: none;
        margin-left: 0;
        text-indent: -0.6em;
      }
    }
  }
}

.all-posts {
  margin-left: 0px;
  margin-right: 0px;

  @media (min-width: $screen-sm-min) {
    #search-container {
      padding-top: 75px;
      padding-bottom: 150px;
    }
  }

  @media (min-width: $screen-md-min) {
    margin-left: -15px;
    margin-right: -15px;

    #search-container {
      padding-bottom: 300px;
    }
  }

  #search-input {
    position: relative;
    width: 100%;
    padding: 6px 15px 6px 30px;
    margin: 2px;
    margin-bottom: 30px;

    color: $dark;
    background-color: $white;

    border: 1px solid #adc5cf;
    border-radius: 15px;
    -moz-border-radius: 15px;
    -webkit-border-radius: 15px;
  }

  #search-input:focus {
    outline: none;
  }

  .content-panel {
    padding-left: 10px;
    padding-right: 10px;
    @media (min-width: $screen-md-min) {
      padding-left: 30px;
      padding-right: 30px;
    }
  }
}
/* ... */

